--- a/client/style.less
+++ b/client/style.less
@@ -1,1 +1,3 @@
+@import url('https://fonts.googleapis.com/css?family=Lato:300,400,700');
+@import '/imports/less/vendor/elemental/elemental.less';
 @import '/imports/less/keshbek.less';
