--- a/imports/less/keshbek.less
+++ b/imports/less/keshbek.less
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Lato:300,400,700');
-
 * {
     padding: 0;
     margin: 0;
@@ -86,7 +84,7 @@ html, body {
     ul {
         list-style-type: none;
 
-        .loan {
+        .transaction {
             background-color: #fff;
             padding: 25px;
             margin: 25px 0;
@@ -96,24 +94,25 @@ html, body {
             display: flex;
             align-content: center;
             justify-content: center;
-            height: 100px;
+            height: 150px;
 
-            .creditor {
+            .creditor, .debitor {
                 width: 25%;
                 display: flex;
                 align-items: center;
+                flex-direction: column;
 
-                .creditor-label {
+                .label {
                     text-align: center;
                     padding: 0 25px;
 
-                    .creditor-name {
+                    .name {
                         font-weight: bold;
                     }
                 }
 
-                .creditor-image {
-                    height: 100px;
+                .image {
+                    height: 60px;
 
                     img {
                         max-width: 100%;
@@ -124,7 +123,7 @@ html, body {
             }
 
             .info {
-                width: 40%;
+                width: 30%;
                 display: flex;
                 align-items: center;
                 justify-content: center;
@@ -147,16 +146,16 @@ html, body {
             }
 
             .amount {
-                width: 25%;
+                width: 15%;
                 display: flex;
                 align-items: center;
                 justify-content: center;
                 font-size: 30px;
-                color: #e23456;
+                color: #111;
             }
 
             .actions {
-                width: 10%;
+                width: 5%;
                 display: flex;
                 flex-direction: column;
                 align-items: flex-end;
