--- a/imports/less/keshbek.less
+++ b/imports/less/keshbek.less
@@ -1,3 +1,5 @@
+@import 'button.less';
+
 * {
     padding: 0;
     margin: 0;
@@ -71,6 +73,7 @@ html, body {
     margin-left: 250px;
     padding: 50px;
     background-color: #f0f4f6;
+    min-height: ~"calc(100% - 150px)";
 
     .container {
         max-width: 1260px;
@@ -180,3 +183,53 @@ html, body {
     }
 }
 
+.actions-bar{
+    display: flex;
+
+    .search-action {
+        width: 88%;
+        display: flex;
+        align-items: center;
+
+        label {
+            margin-right: 10px;
+        }
+
+        .search {
+            width: 100%;
+            height: 30px;
+            border-radius: 4px;
+            border: 0;
+            padding: 10px;
+            font-size: 16px;
+            height: 39px;
+
+            &:focus {
+                outline: none;
+                border-color: #89ebac;
+                box-shadow: 0 0 10px #89ebac;
+            }
+        }
+    }
+    
+    .new-entry-action {
+        width: 12%;
+        display: flex;
+        justify-content: flex-end;
+    }
+}
+
+.footer {
+    height: 50px;
+    background-color: black;
+    color: white;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    h4 {
+        color: white;
+        margin: 0;
+    }
+}
