Add new transation page

--- a/imports/less/keshbek.less
+++ b/imports/less/keshbek.less
@@ -1,5 +1,3 @@
-@import 'button.less';
-
 * {
     padding: 0;
     margin: 0;
@@ -233,3 +231,11 @@ html, body {
         margin: 0;
     }
 }
+
+//components
+@import 'components/button.less';
+@import 'components/form.less';
+@import 'components/input.less';
+
+//pages
+@import 'pages/new-transaction.less';
