--- a/imports/less/components/button.less
+++ b/imports/less/components/button.less
@@ -12,6 +12,7 @@
     background-color: #1CAF46;
     color: #fff;
     transition: all 0.3s;
+    border: 1px solid #1CAF46;
 
     &:hover {
         background-color: #1a993e;
@@ -23,5 +24,25 @@
 
     &:focus {
         color: #fff;
+    }
+}
+
+.btn-cancel {
+    background-color: #fff;
+    color: #000;
+    border: 1px solid #000;
+    transition: all 0.3s;
+
+    &:hover {
+        background-color: #f0f4f6;
+        outline: 0;
+        border-color: #f0f4f6;
+        box-shadow: 0 0 10px #f0f4f6;
+    }
+}
+
+.btn-group {
+    button {
+        margin-left: 15px;
     }
 }
