Add basic pagination with load more button for transactions.

--- a/imports/less/keshbek.less
+++ b/imports/less/keshbek.less
@@ -236,6 +236,7 @@ html, body {
 @import 'components/button.less';
 @import 'components/form.less';
 @import 'components/input.less';
+@import 'components/pagination.less';
 
 //pages
 @import 'pages/new-transaction.less';
