--- a/imports/less/components/button.less
+++ b/imports/less/components/button.less
@@ -5,6 +5,7 @@
 
     &:hover, &:focus {
         text-decoration: none;
+        outline: 0;
     }
 }
 
@@ -35,9 +36,21 @@
 
     &:hover {
         background-color: #f0f4f6;
-        outline: 0;
         border-color: #f0f4f6;
         box-shadow: 0 0 10px #f0f4f6;
+    }
+}
+
+.btn-default {
+    background-color: #818197;
+    color: #fff;
+    border: 1px solid #818197;
+    transition: all 0.3s;
+
+    &:hover {
+        background-color: #6d6d7f;
+        border-color: #6d6d7f;
+        box-shadow: 0 0 10px #6d6d7f;
     }
 }
 
