--- a/imports/less/keshbek.less
+++ b/imports/less/keshbek.less
@@ -225,6 +225,7 @@ html, body {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-left: 250px;
 
     h4 {
         color: white;
