--- a/imports/less/keshbek.less
+++ b/imports/less/keshbek.less
@@ -1,236 +1,282 @@
 * {
-    padding: 0;
-    margin: 0;
-    font-family: 'Lato', sans-serif;
+  padding: 0;
+  margin: 0;
+  font-family: 'Lato', sans-serif;
 }
 
 html, body {
-    height: 100%;
+  height: 100%;
 
-    #app {
-        .page {
-            height: 100%;
-        }
+  #app {
+    .page {
+      height: 100%;
     }
+  }
 }
 
-.navbar {
+.navigation {
+  width: 350px;
+  height: 100%;
+  position: fixed;
+  display: flex;
+
+  .groups {
+    width: 100px;
+    background-color: #202225;
+    padding: 25px;
+
+    ul {
+      list-style: none;
+    }
+
+    .group {
+      width: 50px;
+      height: 50px;
+      border-radius: 5px;
+      line-height: 50px;
+      display: block;
+      margin-bottom: 15px;
+      text-align: center;
+      border: 1px solid #414447;
+      color: white;
+      transition: all 0.3s;
+      
+      &:hover{
+        text-decoration: none;
+        background-color: #6d6d7f;
+        border-color: #6d6d7f;
+        box-shadow: 0 0 10px #6d6d7f;
+      }
+    }
+  }
+
+  .navbar{
     width: 250px;
     background-color: #fff;
     height: 100%;
     position: fixed;
+    left: 100px;
 
     ul {
-        width: 150px;
-        margin-left: 50px;
-        list-style: none;
-
-        a {
-            color: black;
-            line-height: 24px;
-            text-decoration: none;
-        }
+      width: 150px;
+      margin-left: 50px;
+      list-style: none;
+  
+      a {
+        color: black;
+        line-height: 24px;
+        text-decoration: none;
+      }
     }
-
+  
     .accounts-wrapper {
-        position: absolute;
-        bottom: 50px;
-        margin-left: 0;
-        text-align: center;
-        width: 100%;
+      position: absolute;
+      bottom: 50px;
+      margin-left: 0;
+      text-align: center;
+      width: 100%;
     }
-    
+  }
 }
 
 .header {
-    margin-left: 250px;
-    height: 100px;
-    background-color: #fff;
+  margin-left: 250px;
+  height: 100px;
+  background-color: #fff;
+  display: flex;
+  width: ~"calc(100% - 350px)";
+  align-items: center;
+
+  .headline {
+    width: 70%;
     display: flex;
-    width: ~"calc(100% - 250px)";
-    align-items: center;
-
-    .headline{
-        width: 30%;
-        margin-left: 50px;
-    }
-
-    .searchbar{
-        width: 40%;
-        margin-left: 50px;
-    }
-
-    .login {
-        width: 30%;
-        text-align: right;
-        margin-right: 50px;
-    }
-}
-
-.content { 
-    margin-left: 250px;
-    padding: 50px;
-    background-color: #f0f4f6;
-    min-height: ~"calc(100% - 150px)";
-
-    .container {
-        max-width: 1260px;
-        margin: 0 auto;
-    }
+    justify-content: center;
 
     h2 {
-        margin-bottom: 20px;
+      margin-right: 50px;
+
+      &:last-child {
+        margin-right: 0;
+      }
     }
+  }
 
-    ul {
-        list-style-type: none;
+  .searchbar {
+    width: 40%;
+    margin-left: 50px;
+  }
 
-        .transaction {
-            background-color: #fff;
-            padding: 25px;
-            margin: 25px 0;
-            border-left: 2px solid #1CAF46;
-            border-top-left-radius: 3px;
-            border-bottom-left-radius: 3px;
-            display: flex;
-            align-content: center;
-            justify-content: center;
-            height: 150px;
-
-            .creditor, .debitor {
-                width: 25%;
-                display: flex;
-                align-items: center;
-                flex-direction: column;
-
-                .label {
-                    text-align: center;
-                    padding: 0 25px;
-
-                    .name {
-                        font-weight: bold;
-                    }
-                }
-
-                .image {
-                    height: 60px;
-
-                    img {
-                        max-width: 100%;
-                        max-height: 100%;
-                        border-radius: 100px;
-                    }
-                }
-            }
-
-            .info {
-                width: 30%;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                display: flex;
-                flex-direction: column;
-
-                .description {
-                    font-size: 20px;
-                }
-
-                .divider {
-                    width: 30px;
-                    margin-bottom: 10px;
-                    margin-top: 10px;
-                }
-
-                .date {
-                    font-size: 14px;
-                }
-            }
-
-            .amount {
-                width: 15%;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                font-size: 30px;
-                color: #111;
-            }
-
-            .actions {
-                width: 5%;
-                display: flex;
-                flex-direction: column;
-                align-items: flex-end;
-
-                button {
-                    width: 40px;
-                    height: 40px;
-                    margin-bottom: 20px;
-                    border: 1px solid #E6EDF0;
-                    border-radius: 20px;
-                    line-height: 40px;
-                    cursor: pointer;
-                    font-size: 18px;
-                    color: #818197;
-
-                    &:last-child {
-                        margin-bottom: 0;
-                    }
-                }
-            }
-        }
-    }
+  .login {
+    width: 30%;
+    text-align: right;
+    margin-right: 50px;
+  }
 }
 
-.actions-bar{
-    display: flex;
+.content {
+  margin-left: 250px;
+  padding: 50px;
+  background-color: #f0f4f6;
+  min-height: ~"calc(100% - 150px)";
 
-    .search-action {
-        width: 88%;
+  .container {
+    max-width: 1260px;
+    margin: 0 auto;
+  }
+
+  h2 {
+    margin-bottom: 30px;
+    text-align: center;
+  }
+
+  ul {
+    list-style-type: none;
+
+    .transaction {
+      background-color: #fff;
+      padding: 25px;
+      margin: 25px 0;
+      border-left: 2px solid #1CAF46;
+      border-top-left-radius: 3px;
+      border-bottom-left-radius: 3px;
+      display: flex;
+      align-content: center;
+      justify-content: center;
+      height: 150px;
+
+      .creditor, .debitor {
+        width: 25%;
         display: flex;
         align-items: center;
+        flex-direction: column;
 
-        label {
-            margin-right: 10px;
+        .label {
+          text-align: center;
+          padding: 0 25px;
+
+          .name {
+            font-weight: bold;
+          }
         }
 
-        .search {
-            width: 100%;
-            height: 30px;
-            border-radius: 4px;
-            border: 0;
-            padding: 10px;
-            font-size: 16px;
-            height: 39px;
+        .image {
+          height: 60px;
 
-            &:focus {
-                outline: none;
-                border-color: #89ebac;
-                box-shadow: 0 0 10px #89ebac;
-            }
+          img {
+            max-width: 100%;
+            max-height: 100%;
+            border-radius: 100px;
+          }
         }
-    }
-    
-    .new-entry-action {
-        width: 12%;
+      }
+
+      .info {
+        width: 30%;
         display: flex;
-        justify-content: flex-end;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+
+        .description {
+          font-size: 20px;
+        }
+
+        .divider {
+          width: 30px;
+          margin-bottom: 10px;
+          margin-top: 10px;
+        }
+
+        .date {
+          font-size: 14px;
+        }
+      }
+
+      .amount {
+        width: 15%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 30px;
+        color: #111;
+      }
+
+      .actions {
+        width: 5%;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+
+        button {
+          width: 40px;
+          height: 40px;
+          margin-bottom: 20px;
+          border: 1px solid #E6EDF0;
+          border-radius: 20px;
+          line-height: 40px;
+          cursor: pointer;
+          font-size: 18px;
+          color: #818197;
+
+          &:last-child {
+            margin-bottom: 0;
+          }
+        }
+      }
     }
+  }
+}
+
+.actions-bar {
+  display: flex;
+
+  .search-action {
+    width: 88%;
+    display: flex;
+    align-items: center;
+
+    label {
+      margin-right: 10px;
+    }
+
+    .search {
+      width: 100%;
+      height: 30px;
+      border-radius: 4px;
+      border: 0;
+      padding: 10px;
+      font-size: 16px;
+      height: 39px;
+
+      &:focus {
+        outline: none;
+        border-color: #89ebac;
+        box-shadow: 0 0 10px #89ebac;
+      }
+    }
+  }
+
+  .new-entry-action {
+    width: 12%;
+    display: flex;
+    justify-content: flex-end;
+  }
 }
 
 .footer {
-    height: 50px;
-    background-color: black;
-    color: white;
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-left: 250px;
+  height: 50px;
+  background-color: black;
+  color: white;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 250px;
 
-    h4 {
-        color: white;
-        margin: 0;
-    }
+  h4 {
+    color: white;
+    margin: 0;
+  }
 }
 
 //components
